--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,21 @@
         <div class="row">
             <div class="col-8">
                 <div id="map" style="width: 100%; height: 600px"></div>
-
             </div>
             <div class="col-4" style="background: rgba(43,226,141,0.34)">
-                <div class="row">
-                    <input type="button" value="Новая линия" id="startEditPolyline" width="100%"/>
-                </div>
-                <div class="row">
-                    <input type="button" value="Завершить редактирование" id="stopEditPolyline" width="100%"/>
-                </div>
-                <div class="row">
-                    <input type="button" value="Удалить линию" id="dellPolyline" width="100%"/>
-                </div>
+                    <button type="button" class="btn btn-secondary btn-block" id="startEditPolyline">Новая линия</button>
+                    <button type="button" class="btn btn-secondary btn-block" id="stopEditPolyline" >Завершить редактирование</button>
+                    <button type="button" class="btn btn-secondary btn-block" id="dellPolyline">Удалить линию</button>
+                    <button type="button" class="btn btn-secondary btn-block" id="saveData">Отправить данные</button>
+
                 <div id="geometry"/>
+
+                <div class="row py-3 px-3">
+                    <div id="objlist"/>
+                </div>
             </div>
         </div>
+
     </div>
 
 
