--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-8">
-                <div style="background: cadetblue; width: 100%; height: 600px"></div>
+                <div id="respPict" style="background: cadetblue; width: 100%; height: 600px"></div>
             </div>
             <div class="col-4" style="background: rgba(43,226,141,0.34)">
                 <!--
