--- a/templates/index.html
+++ b/templates/index.html
@@ -15,19 +15,14 @@
                 <div id="respPict" style="background: cadetblue; width: 100%; height: 600px"></div>
             </div>
             <div class="col-4" style="background: rgba(43,226,141,0.34)">
-                <!--
-                <form action="/upload_file" method=post enctype=multipart/form-data>
-                    <div class="form-group">
-                        <label for="exampleFormControlFile1">Файл изображения</label>
-                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                    </div>
-                      <button type="submit" class="btn btn-primary btn-block">Отправить</button>
-                </form>
-                -->
-                <form name="uploader" enctype="multipart/form-data" method="POST">
-                    Отправить этот файл: <input name="file" type="file"/>
-                    <button type="submit" name="submit" class="btn btn-primary btn-block">Отправить</button>
-                </form>
+                <div class="input-group mb-3">
+
+                    <form name="uploader" enctype="multipart/form-data" method="POST">
+
+                        <input name="file" type="file"/>
+                        <button type="submit" name="submit" class="btn btn-primary btn-block my-3">Отправить</button>
+                    </form>
+                </div>
                 <div id="fileData"/>
             </div>
         </div>
