Changed js file and some in filename var

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,9 @@
                         <button type="submit" name="submit" class="btn btn-primary btn-block my-3">Отправить</button>
                     </form>
                 </div>
-                <div id="fileData"/>
+                <div id="fileData_done"/>
+                <div id="fileData_mask"/>
+                <div id="fileData_heatmap"/>
             </div>
         </div>
 
