--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,15 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8">
-                <div id="respPict" style="background: cadetblue; width: 100%; height: 600px"></div>
+            <div class="col-8" >
+                <div class="row" >
+                    <div class="col-10"  id="fileData_done"></div>
+                </div>
+                <div class="row m-2">
+                    <div class="col-4 top-cover center-block" id="fileData_mask"></div>
+                    <div class="col-4 top-cover center-block" id="fileData_heatmap"></div>
+                </div>
+                {#                <div id="respPict" style="background: cadetblue; width: 100%; height: 600px"></div>#}
             </div>
             <div class="col-4" style="background: rgba(43,226,141,0.34)">
                 <div class="input-group mb-3">
@@ -23,11 +30,10 @@
                         <button type="submit" name="submit" class="btn btn-primary btn-block my-3">Отправить</button>
                     </form>
                 </div>
-                <div id="fileData_done"/>
-                <div id="fileData_mask"/>
-                <div id="fileData_heatmap"/>
             </div>
         </div>
+
+
 
     </div>
 
