--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
                     <form name="uploader" enctype="multipart/form-data" method="POST">
 
-                        <input name="file" type="file"/>
+                        <input name="file" type="file" multiple/>
                         <button type="submit" name="submit" class="btn btn-primary btn-block my-3">Отправить</button>
                     </form>
                 </div>
