--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-8" >
-                <div class="row" >
-                    <div class="col-10"  id="fileData_done"></div>
+            <div class="col-8">
+                <div class="row">
+                    <div class="col-10" id="fileData_done"></div>
                 </div>
                 <div class="row m-2">
                     <div class="col-4 top-cover center-block" id="fileData_mask"></div>
@@ -21,8 +21,8 @@
                 </div>
                 {#                <div id="respPict" style="background: cadetblue; width: 100%; height: 600px"></div>#}
             </div>
-            <div class="col-4" style="background: rgba(43,226,141,0.34)">
-                <div class="input-group mb-3">
+            <div class="col-4" id="geodata_json" style="background: rgba(43,226,141,0.34)">
+                <div class="input-group my-3">
 
                     <form name="uploader" enctype="multipart/form-data" method="POST">
 
@@ -30,9 +30,13 @@
                         <button type="submit" name="submit" class="btn btn-primary btn-block my-3">Отправить</button>
                     </form>
                 </div>
-            </div>
-        </div>
 
+{#                <a href="uploads/2797fAD464aED315e74d8aa07dE150c91_geodata.json" download="proposed_file_name.json"#}
+{#                   class="btn btn-secondary btn-block my-3"  role="button">Скачать geojson</a>#}
+            </div>
+
+
+        </div>
 
 
     </div>
