--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
 
-    <script src="https://api-maps.yandex.ru/2.1/?apikey={{ maps_api_key }}&lang=ru_RU" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=54db9319-2b11-4398-92dc-4e58cbedace4&lang=ru_RU" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='js/polylineEditor.js') }}" type="text/javascript"></script>
 
     <style type="text/css">
