--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,15 @@
                     </form>
                 </div>
 
-{#                <a href="uploads/2797fAD464aED315e74d8aa07dE150c91_geodata.json" download="proposed_file_name.json"#}
-{#                   class="btn btn-secondary btn-block my-3"  role="button">Скачать geojson</a>#}
+                {#                <a href="uploads/2797fAD464aED315e74d8aa07dE150c91_geodata.json" download="proposed_file_name.json"#}
+                {#                   class="btn btn-secondary btn-block my-3"  role="button">Скачать geojson</a>#}
             </div>
 
-
+        </div>
+        <div class="row">
+            <div class="col-8">
+                <div id="map" style="width: 100%; height: 600px"></div>
+            </div>
         </div>
 
 
